--- a/app/src/main/res/layout/activity_post.xml
+++ b/app/src/main/res/layout/activity_post.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!-- Layout principal de la actividad de publicación -->
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,4 +8,175 @@
     android:layout_height="match_parent"
     tools:context=".view.PostActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- AppBarLayout que contiene la barra de herramientas y el título -->
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/headerbkg"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <!-- CollapsingToolbarLayout que contiene el título y la imagen de fondo -->
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:id="@+id/collapsing_toolbar_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:contentScrim="?attr/colorPrimary"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+
+            <!-- ImageView que muestra la imagen de fondo -->
+            <ImageView
+                android:id="@+id/image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/uploadimg"
+                app:layout_collapseMode="parallax" />
+
+            <!-- Toolbar que contiene el título y el botón de acción -->
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin" />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <!-- NestedScrollView que contiene todo el contenido scrollable, incluyendo la imagen inferior -->
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <!-- LinearLayout que envuelve todo el contenido scrollable -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp">
+
+            <!-- CardView que contiene los campos de texto y el botón de publicación -->
+            <androidx.cardview.widget.CardView
+                android:id="@+id/card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="50dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="8dp">
+
+                <!-- LinearLayout que contiene los campos de texto y el botón de publicación -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+
+                    <!-- TextView que muestra el título principal -->
+                    <TextView
+                        android:id="@+id/titulo_principal"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/titulo_ppal"
+                        android:textAlignment="center"
+                        android:textColor="@color/lavender"
+                        android:textSize="24sp" />
+
+                    <!-- RecyclerView que muestra la lista de elementos (oculto por defecto) -->
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/recycler_view"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/lavender_border"
+                        android:visibility="gone"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+                    <!-- EditText que permite ingresar el título del post -->
+                    <EditText
+                        android:id="@+id/titulo_post"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/lavender_border"
+                        android:hint="@string/titulo_post"
+                        android:padding="16dp"
+                        android:textColor="@color/lavender"
+                        android:textSize="13sp" />
+
+                    <!-- EditText que permite ingresar la descripción del post -->
+                    <EditText
+                        android:id="@+id/descripcion"
+                        android:layout_width="match_parent"
+                        android:layout_height="80dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/lavender_border"
+                        android:hint="@string/descripcion"
+                        android:padding="16dp"
+                        android:textColor="@color/lavender"
+                        android:textSize="13sp" />
+
+                    <!-- Spinner que permite seleccionar una opción -->
+                    <Spinner
+                        android:id="@+id/spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@drawable/lavender_border" />
+
+                    <!-- EditText que permite ingresar la duración del post -->
+                    <EditText
+                        android:id="@+id/duracion"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/lavender_border"
+                        android:gravity="start|center_vertical"
+                        android:hint="@string/duracion"
+                        android:inputType="number"
+                        android:padding="16dp"
+                        android:textColor="@color/lavender"
+                        android:textSize="13sp" />
+
+                    <!-- EditText que permite ingresar el presupuesto del post -->
+                    <EditText
+                        android:id="@+id/presupuesto"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="10dp"
+                        android:background="@drawable/lavender_border"
+                        android:gravity="start|center_vertical"
+                        android:hint="@string/presupuesto"
+                        android:inputType="numberDecimal"
+                        android:padding="16dp"
+                        android:textColor="@color/lavender"
+                        android:textSize="13sp" />
+
+                    <!-- Button que permite publicar el post -->
+                    <Button
+                        android:id="@+id/publicar"
+                        android:layout_width="match_parent"
+                        android:layout_height="60dp"
+                        android:layout_marginTop="16dp"
+                        android:text="@string/publicar"
+                        android:textSize="16sp" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <!-- FrameLayout que contiene la imagen inferior -->
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="bottom">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/back_bottom" />
+            </FrameLayout>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
