--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -2,7 +2,6 @@
     android:id="@android:id/text1"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:textColor="@color/lavender"
-    android:textSize="13sp"
     android:padding="16dp"
-    />
+    android:textColor="@color/lavender"
+    android:textSize="13sp" />
