--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Layout principal usando CoordinatorLayout para permitir comportamientos de scroll avanzados -->
+<?xml version="1.0" encoding="utf-8"?><!-- Layout principal usando CoordinatorLayout para permitir comportamientos de scroll avanzados -->
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -31,50 +30,51 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="GESTIÓN DE USUARIOS"
+                android:layout_marginTop="20dp"
+                android:text="@string/gesti_n_de_usuarios"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textSize="22sp"
-                android:textStyle="bold"
-                android:textAlignment="center"
-                android:layout_marginTop="20dp"/>
+                android:textStyle="bold" />
             <!-- Ícono representativo de usuarios -->
             <ImageView
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/ic_person"
                 android:layout_gravity="center"
-                android:layout_marginTop="40dp"/>
+                android:layout_marginTop="40dp"
+                android:src="@drawable/ic_person" />
         </io.github.florent37.shapeofview.shapes.ArcView>
 
         <!-- Sección de ID: Campo de solo lectura para mostrar el identificador del usuario -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:layout_marginTop="20dp"
-            android:layout_gravity="center">
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal">
             <!-- Ícono de ID -->
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_id"
+                android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center" />
+                android:src="@drawable/ic_id" />
             <!-- Campo de texto para ID usando Material Design -->
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:layout_height="wrap_content">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/itId"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:enabled="false"
+                    android:hint="@string/id"
                     android:inputType="text"
-                    android:hint="ID"
-                    android:singleLine="true"
-                    android:enabled="false" />
+                    android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
 
@@ -82,29 +82,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center">
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal">
             <!-- Ícono de usuario -->
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_person_pin"
+                android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center" />
+                android:src="@drawable/ic_person_pin" />
             <!-- Campo de texto para nombre de usuario -->
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:layout_height="wrap_content">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/itUsuario"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="@string/nombre_de_usuario"
                     android:inputType="text"
-                    android:hint="Nombre de Usuario"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -113,29 +114,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center">
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal">
             <!-- Ícono de email -->
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_email"
+                android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center" />
+                android:src="@drawable/ic_email" />
             <!-- Campo de texto para correo electrónico -->
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:layout_height="wrap_content">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/itEmail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="@string/correo_electr_nico"
                     android:inputType="textEmailAddress"
-                    android:hint="Correo electrónico"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -144,29 +146,30 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:layout_gravity="center"
             android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
             android:layout_marginTop="10dp"
-            android:layout_gravity="center">
+            android:layout_marginRight="30dp"
+            android:orientation="horizontal">
             <!-- Ícono de contraseña -->
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                android:src="@drawable/ic_lock"
+                android:layout_gravity="center"
                 android:layout_marginRight="5dp"
-                android:layout_gravity="center" />
+                android:src="@drawable/ic_lock" />
             <!-- Campo de texto para contraseña -->
             <com.google.android.material.textfield.TextInputLayout
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+                android:layout_height="wrap_content">
+
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/itPassword"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:hint="@string/pass"
                     android:inputType="textPassword"
-                    android:hint="Contraseña"
                     android:singleLine="true" />
             </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
@@ -175,11 +178,11 @@
         <GridLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="30dp"
             android:columnCount="2"
-            android:rowCount="2"
-            android:layout_gravity="center"
-            android:padding="8dp">
+            android:padding="8dp"
+            android:rowCount="2">
 
             <!-- Botón Crear: Inicia el proceso de creación de un nuevo usuario -->
             <Button
@@ -187,8 +190,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:text="Crear"
                 android:backgroundTint="@color/primary"
+                android:text="@string/crear"
                 android:textColor="@color/white" />
 
             <!-- Botón Leer: Recupera y muestra la información del usuario -->
@@ -197,10 +200,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:text="Leer"
+                android:layout_marginStart="10dp"
                 android:backgroundTint="@color/primary"
-                android:textColor="@color/white"
-                android:layout_marginLeft="10dp" />
+                android:text="@string/leer"
+                android:textColor="@color/white" />
 
             <!-- Botón Actualizar: Guarda los cambios realizados en el usuario -->
             <Button
@@ -208,10 +211,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:text="Actualizar"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@color/primary"
-                android:textColor="@color/white"
-                android:layout_marginTop="10dp" />
+                android:text="@string/actualizar2"
+                android:textColor="@color/white" />
 
             <!-- Botón Eliminar: Elimina el usuario actual -->
             <Button
@@ -219,11 +222,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_columnWeight="1"
-                android:text="Eliminar"
-                android:backgroundTint="@color/primary"
-                android:textColor="@color/white"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginLeft="10dp" />
+                android:backgroundTint="@color/primary"
+                android:text="@string/eliminar"
+                android:textColor="@color/white" />
         </GridLayout>
 
     </LinearLayout>
@@ -233,9 +236,9 @@
         android:id="@+id/circleImageBack"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@drawable/ic_arrow_left"
-        android:background="@drawable/circular_background"
-        android:scaleType="centerCrop"
         android:layout_margin="15dp"
-        android:padding="7dp"/>
+        android:background="@drawable/circular_background"
+        android:padding="7dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/ic_arrow_left" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
